# tab-foundry

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  program.md  pyproject.toml
.codex/: worktree_init.sh
.github/workflows/: test.yml
.hypothesis/constants/: 06cc08d22518d3cc  074559924f4615bb  12677879feff4e1b  1354b32e4f144ad1  18f077f72f5a4e8e  1d4d9f0612f26f8a  2540ebfa3e8abb7b  2997f71d728ba6a7  2a912edc703a7959  2b2e455ac32849df  2c7625c8d940fb92  31579edf85b92efa  37a6d0687b4ccc41  3bfd525f674455e4  3f39957d179a9056  405b7a0a5ea8211b  41c2f3b2b9cf61fd  46de96b0010e8666  4b65499d6ca3b507  51a31efba3206bbf  59cc6ec4c2c981f4  62f78c77b5d7f6c9  6491d04fda3b3b92  664e49ba89c0d6a3  699d6bf9f23e1cd5  71ad045c0d492f5c  7749f0b61ebc53ee  78a245b03aa7b185  7fa0fe36ab7e9951  8063a7eb8d29a5bd  815b78e673a88245  8b5a56ec9342f5e0  8d3478fc4d478c99  8e03e74e5d95e551  8f6004e5a20b6cd0  8fa4c34963e13d8b  92ad8c5e44688e61  92d50203c8dc4ef8  94eefa0ce41c1561  950d70e310af2758  (+39 more)
configs/: config.yaml
configs/data/: default.yaml
configs/experiment/: cls_benchmark_linear.yaml  cls_benchmark_linear_simple.yaml  cls_benchmark_linear_simple_prior.yaml  cls_benchmark_staged.yaml  cls_benchmark_staged_explore.yaml  cls_benchmark_staged_prior.yaml  cls_benchmark_staged_prior_cuda_scale.yaml  cls_benchmark_staged_prior_cuda_scale_explore.yaml  cls_benchmark_staged_prior_explore.yaml  cls_manyclass_eval.yaml  cls_nano_aligned.yaml  cls_smoke.yaml  cls_workstation.yaml  reg_smoke.yaml  reg_workstation.yaml
configs/logging/: wandb.yaml
configs/model/: default.yaml
configs/optimizer/: adamw.yaml  muon_default.yaml  schedulefree_adamw.yaml
configs/preprocessing/: default.yaml
configs/runtime/: smoke.yaml  workstation.yaml
configs/schedule/: scaled_default.yaml
configs/training/: default.yaml
docs/: ARCHITECTURE_STRATEGY.md  INFERENCE_CONTRACT.md  RESEARCH_WORKFLOW.md  architecture.md  inference.md  roadmap.md  workflows.md
docs/development/: architecture-deltas.md  codebase-navigation.md  dataset-curation.md  design-decisions.md  model-architecture.md  model-config.md  module-dependency-map.md  repo-audit-2026-03-15.md  roadmap.md
reference/: PAPERS.md  README.md  dataset_license_review_summary.md  dataset_license_reviews.csv  evidence.md  external_repos.md  literature_evidence.md  papers.md  stage_campaign_template.md  stage_research_sources.yaml  system_delta_campaign_template.md  system_delta_catalog.yaml  system_delta_matrix.md  system_delta_queue.yaml
reference/system_delta_sweeps/: index.yaml
scripts/: benchmark_nanotabpfn.py  bootstrap_benchmark_envs.py  build_manifest.sh  build_openml_benchmark_bundle.py  bump_version.py  configure_repo_protection.sh  dagzoo_smoke.py  dev  diagnose_benchmark_bounce.py  eval_iris_checkpoint.py  eval_smoke.sh  execute_input_norm_followup.py  freeze_control_baseline.py  iris_smoke.py  register_benchmark_run.py  run_nanotabpfn_benchmark_helper.py  system_delta_execute.py  system_delta_promote.py  system_delta_queue.py  train_nanoprior_tab_foundry.py  train_smoke.sh  train_tabfoundry_simple_prior.py  train_tabfoundry_staged_prior.py  tune_tab_foundry.py  visualize_architecture.py
scripts/audit/: check_markdown_links.py  check_repo_paths.py  check_version_bump.py  dev_index.yaml  dev_verify.py  module_graph.py
src/tab_foundry/: __init__.py  checkpoint_classifier.py  cli.py  config.py  feature_state.py  input_normalization.py  iris_eval.py  nanoprior_train.py  nanotabpfn_benchmark.py  nanotabpfn_compare.py  provenance.py  smoke.py  timestamps.py  types.py
tests/: test_provenance.py
tests/audit/: test_audit_scripts.py  test_dev_verify.py
tests/benchmark/: benchmark_run_registry_cases.py  nanotabpfn_compare_cases.py  openml_bundle_fakes.py  prior_train_cases.py  test_benchmark_envs.py  test_benchmark_run_registry.py  test_benchmark_run_registry_derive.py  test_benchmark_run_registry_fixture.py  test_benchmark_run_registry_legacy.py  test_benchmark_run_registry_register.py  test_bounce_diagnosis.py  test_bounce_diagnosis_analysis.py  test_bounce_diagnosis_execution.py  test_bounce_diagnosis_rerun.py  test_checkpoint_classifier.py  test_control_baseline.py  test_instability_audit.py  test_iris.py  test_nanotabpfn_bundle.py  test_nanotabpfn_cli.py  test_nanotabpfn_compare.py  test_nanotabpfn_datasets.py  test_nanotabpfn_metrics.py  test_nanotabpfn_run.py  test_nanotabpfn_summary.py  test_openml_benchmark_bundle.py  test_openml_benchmark_bundle_cli.py  (+13 more)
(+396 files in other folders)
