[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tab-foundry"
version = "0.1.0"
description = "TabICLv2-style tabular foundation model training on cauchy-generator outputs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
dependencies = [
  "accelerate>=1.2",
  "hydra-core>=1.3",
  "numpy>=2.1",
  "omegaconf>=2.3",
  "pyarrow>=23.0",
  "safetensors>=0.4",
  "torch>=2.8",
  "wandb>=0.20",
]

[project.scripts]
tab-foundry = "tab_foundry.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.11",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tab_foundry"]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.coverage.run]
source = ["tab_foundry"]
omit = [
  "src/tab_foundry/cli.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
ignore_missing_imports = true
strict_equality = true
