[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tab-foundry"
version = "0.3.0"
description = "Tabfoundry tabular foundation model training on dagzoo packed shard outputs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
dependencies = [
  "accelerate>=1.2",
  "hydra-core>=1.3",
  "numpy>=2.1",
  "omegaconf>=2.3",
  "pyarrow>=23.0",
  "safetensors>=0.4",
  "schedulefree>=1.4",
  "torch>=2.8",
  "wandb>=0.20",
]

[project.scripts]
tab-foundry = "tab_foundry.cli:main"

[dependency-groups]
dev = [
  "matplotlib>=3.10",
  "mdformat>=0.7",
  "mypy>=1.11",
  "openml>=0.15",
  "pandas>=2.2",
  "pre-commit>=3.8",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.6",
  "scikit-learn>=1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tab_foundry"]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.coverage.run]
source = ["tab_foundry"]
omit = [
  "src/tab_foundry/cli/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
ignore_missing_imports = true
strict_equality = true
