[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tab-foundry"
version = "0.8.6"
description = "Tabfoundry tabular foundation model training on dagzoo packed shard outputs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14,<3.15"
dependencies = [
  "accelerate>=1.2",
  "graphviz>=0.20",
  "hydra-core>=1.3",
  "numpy>=2.1",
  "omegaconf>=2.3",
  "pydantic>=2.12",
  "pyarrow>=23.0",
  "PyYAML>=6.0",
  "safetensors>=0.4",
  "schedulefree>=1.4",
  "torch>=2.8",
  "torchview>=0.2.7",
  "wandb>=0.20",
]

[project.optional-dependencies]
benchmark = [
  "h5py>=3.12",
  "matplotlib>=3.10",
  "openml>=0.15",
  "pandas>=2.2",
  "scikit-learn>=1.6",
]
muon = [
  "muon-optimizer>=0.1.0",
]

[project.scripts]
tab-foundry = "tab_foundry.cli:main"

[dependency-groups]
dev = [
  "deptry>=0.23",
  "grimp>=3.6",
  "h5py>=3.12",
  "hypothesis>=6.130",
  "matplotlib>=3.10",
  "mdformat>=0.7",
  "mypy>=1.11",
  "muon-optimizer>=0.1.0",
  "openml>=0.15",
  "pandas>=2.2",
  "pre-commit>=3.8",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "pytest-xdist>=3.5",
  "ruff>=0.6",
  "scikit-learn>=1.6",
  "torchinfo>=1.8",
  "types-PyYAML>=6.0",
  "vulture>=2.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tab_foundry"]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: long-running benchmark coverage",
]
addopts = "-n auto --maxprocesses 8"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.coverage.run]
source = ["tab_foundry"]
omit = [
  "src/tab_foundry/cli/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
ignore_missing_imports = true
strict_equality = true

[tool.deptry]
extend_exclude = ["scripts/audit"]
known_first_party = ["tab_foundry"]
package_module_name_map = { "muon-optimizer" = ["muon"], "scikit-learn" = ["sklearn"] }
per_rule_ignores = { DEP001 = ["model", "train"] }
